# ai_agent

./: .gitignore  README.md  pyproject.toml
config/chain_of_thought/: config.yaml  cot_config.yaml
config/chain_of_thought/aggregation/: one_sample.yaml
config/chain_of_thought/dataset/: gsm8k.yaml
config/chain_of_thought/model/: gpt35.yaml  gpt4.yaml
config/chain_of_thought/prompt/: few_shot_cot.yaml  standard.yaml
config/chain_of_thought/sampling/: greedy.yaml
config/chain_of_thought/task/: gsm8k.yaml
config/self_consistency/: config.yaml
config/self_consistency/aggregation/: majority_vote.yaml
config/self_consistency/algorithm/: self_consistency.yaml
config/self_consistency/dataset/: gsm8k.yaml
config/self_consistency/prompt/: few_shot_cot.yaml  zero_shot_cot.yaml
config/self_consistency/reasoning_algorithm/: normal_reasoning.yaml
config/self_consistency/sampling/: greedy.yaml  top_p_sampling.yaml
doc/conversation_memory/: conversation_seq.puml
log/chain_of_thought/: log.txt
script/: cot_experiment.sh
src/ai_agent/chain_of_thought/: di.py  run_experiment.py
src/ai_agent/chain_of_thought/application/services/: experiment_execution_service.py  experiment_service.py
src/ai_agent/chain_of_thought/domain/services/: prompt_service.py
src/ai_agent/chain_of_thought/domain/value_objects/: dataset_types.py  experiment_types.py  prompts.py  (+1 more)
src/ai_agent/common/di/: reasoning_di.py
src/ai_agent/common/domain/: errors.py
src/ai_agent/self_consistency/: di.py  run_experiment.py
tests/common/domain/conversation/: test_user_segment_graph.py
(+72 files in other folders)
